Java modernization continued: StringBuilder, try-with-resources, isEmpty, lineSeparator
- Init.java: StringBuilder for stack trace loop; try-with-resources for all BufferedReader
  usages in getExternalIP/sendGet/sendPost; remove 37-line dead commented block;
  URLEncoder.encode → StandardCharsets.UTF_8 (eliminates try-catch); simplify sendGet/sendPost
  finally blocks; fix indentation
- BSHExtensionLoader.java: replace String += concatenation in loops with StringBuilder
  for eval/assignment/other accumulators; .equals("") → .isEmpty(); consolidate do-while
  indentation; remove dead commented lines
- LoadGraph6Format.java: wrap inner Scanner sc2 in try-with-resources in parseGraph();
  remove duplicate copyright header
- ReadWriteTextFile.java: System.getProperty("line.separator") → System.lineSeparator();
  replace null-check finally pattern with try-with-resources for both BufferedReader and Writer
- Broad .equals("") → .isEmpty() sweep across 14 files (GraphColoring, SubGraph,
  G6CSVStringLoader, NDMetis, Ellipsoid, Msg, renderers, SaveAction, AttributeSetView,
  GButton, AbstractExtensionAction, ParameterShower, UIHandlerImpl)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>